--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "laraveldaily/laravel-invoices": "2.0",
         "midtrans/midtrans-php": "^2.3"
     },
     "require-dev": {
