--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
 MAIL_USERNAME=squeecourse@gmail.com
-MAIL_PASSWORD=@BocahHulk123
+MAIL_PASSWORD=bocahhulk1234
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=squeecourse@gmail.com
 MAIL_FROM_NAME="Squee Course"
